##~---------------------------------------------------------------------------##
##                     _______  _______  _______  _     _                     ##
##                    |   _   ||       ||       || | _ | |                    ##
##                    |  |_|  ||       ||   _   || || || |                    ##
##                    |       ||       ||  | |  ||       |                    ##
##                    |       ||      _||  |_|  ||       |                    ##
##                    |   _   ||     |_ |       ||   _   |                    ##
##                    |__| |__||_______||_______||__| |__|                    ##
##                             www.amazingcow.com                             ##
##  File      : CMakeLists.txt                                                ##
##  Project   : acow_URLDownloadFile                                          ##
##  Date      : Apr 10, 2018                                                  ##
##  License   : GPLv3                                                         ##
##  Author    : n2omatt <n2omatt@amazingcow.com>                              ##
##  Copyright : AmazingCow - 2018                                             ##
##                                                                            ##
##  Description :                                                             ##
##                                                                            ##
##---------------------------------------------------------------------------~##

cmake_minimum_required(VERSION 3.5)


##----------------------------------------------------------------------------##
## Project                                                                    ##
##----------------------------------------------------------------------------##
set(PROJECT acow_URLDownloadFile)
project(${PROJECT})


##----------------------------------------------------------------------------##
## Sources                                                                    ##
##----------------------------------------------------------------------------##
##------------------------------------------------------------------------------
## Sources
set(SOURCES
    acow/src/win32_URLDownloadFile.cpp
)


##----------------------------------------------------------------------------##
## Library                                                                    ##
##----------------------------------------------------------------------------##
##------------------------------------------------------------------------------
## Lib.
add_executable(${PROJECT} ${SOURCES})

##-----------------------------------------------------------------------------
## Include directories.
target_include_directories(${PROJECT} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

##------------------------------------------------------------------------------
## Dependencies.
target_link_libraries(${PROJECT} LINK_PUBLIC acow_c_goodies)
target_link_libraries(${PROJECT} LINK_PUBLIC acow_cpp_goodies)
target_link_libraries(${PROJECT} LINK_PUBLIC acow_IO)
